--- a/src/main/resources/com/example/csit228f2_2/hello-view.fxml
+++ b/src/main/resources/com/example/csit228f2_2/hello-view.fxml
@@ -2,60 +2,58 @@
 
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="367.0" prefWidth="423.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.csit228f2_2.HelloController">
+<AnchorPane prefHeight="175.0" prefWidth="463.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.csit228f2_2.HelloController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
    <children>
-      <ProgressBar fx:id="pbLife" layoutX="112.0" layoutY="255.0" prefWidth="200.0" progress="0.69" />
-      <ToggleButton fx:id="tbNight" layoutX="356.0" layoutY="32.0" mnemonicParsing="false" onAction="#onNightModeClick" text="Night Mode" />
-      <Text fx:id="txtName" layoutX="65.0" layoutY="92.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+      <HBox alignment="TOP_CENTER" layoutX="39.0" layoutY="36.0" prefHeight="0.0" prefWidth="380.0">
+         <children>
+            <ToggleButton fx:id="tbNight" mnemonicParsing="false" onAction="#onNightModeClick" text="Night Mode">
+               <font>
+                  <Font name="Arial Bold" size="12.0" />
+               </font>
+            </ToggleButton>
+            <Separator prefHeight="23.0" prefWidth="115.0" />
+            <Button fx:id="btnDeleteAccount" mnemonicParsing="false" onAction="#onDeleteAccountClick" prefWidth="112.0" text="Delete Account">
+               <font>
+                  <Font name="Arial Bold" size="12.0" />
+               </font>
+            </Button>
+            <Separator prefHeight="23.0" prefWidth="12.0" />
+            <Button fx:id="btnLogout" mnemonicParsing="false" onAction="#onLogoutClick" text="Logout">
+               <font>
+                  <Font name="Arial Bold" size="12.0" />
+               </font>
+            </Button>
+         </children></HBox>
+      <Label fx:id="lblWelcome" alignment="CENTER" layoutX="76.0" layoutY="109.0" prefHeight="42.0" prefWidth="315.0" text="Hello">
          <font>
-            <Font name="Rockwell Bold" size="71.0" />
+            <Font name="Arial" size="36.0" />
          </font>
-         <fill>
-            <RadialGradient centerX="0.3782287611732624" centerY="0.5" radius="0.5">
-               <stops>
-                  <Stop>
-                     <color>
-                        <Color red="0.5526315569877625" />
-                     </color>
-                  </Stop>
-                  <Stop offset="0.16793893129770993">
-                     <color>
-                        <Color red="0.5526315569877625" />
-                     </color>
-                  </Stop>
-                  <Stop offset="0.7353689567430022">
-                     <color>
-                        <Color red="0.6200000047683716" green="0.6060017943382263" blue="0.0868000015616417" />
-                     </color>
-                  </Stop>
-                  <Stop offset="1.0">
-                     <color>
-                        <Color red="0.12766903638839722" green="0.08265648782253265" blue="0.6228070259094238" />
-                     </color>
-                  </Stop>
-               </stops>
-            </RadialGradient>
-         </fill>
-      </Text>
-      <Spinner layoutX="82.0" layoutY="140.0" />
-      <ProgressIndicator layoutX="329.0" layoutY="244.0" progress="0.67" />
-      <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="277.0" layoutY="78.0" pickOnBounds="true" preserveRatio="true" />
-      <ChoiceBox layoutX="267.0" layoutY="302.0" prefWidth="150.0" />
-      <MenuButton layoutX="82.0" layoutY="302.0" mnemonicParsing="false" text="MenuButton">
-        <items>
-            <MenuItem mnemonicParsing="false" text="Cross Shift" />
-          <MenuItem mnemonicParsing="false" text="CS" />
-          <MenuItem mnemonicParsing="false" text="IT" />
-        </items>
-      </MenuButton>
-      <PasswordField layoutX="106.0" layoutY="184.0" />
+      </Label>
+      <Label fx:id="lblContent1" alignment="CENTER" layoutX="155.0" layoutY="151.0" prefHeight="17.0" prefWidth="156.0" text="iz zo hot and abnormal">
+         <font>
+            <Font name="Arial" size="12.0" />
+         </font></Label>
+      <Separator layoutX="43.0" layoutY="195.0" prefHeight="25.0" prefWidth="380.0" />
+      <HBox alignment="CENTER" layoutX="67.0" layoutY="231.0" prefHeight="25.0" prefWidth="333.0">
+         <children>
+            <TextField fx:id="txtname" prefHeight="25.0" prefWidth="176.0" />
+            <Separator prefHeight="25.0" prefWidth="21.0" />
+            <Button fx:id="btnRename" mnemonicParsing="false" onAction="#onRenameClick" text="Rename">
+               <font>
+                  <Font name="Arial Bold" size="12.0" />
+               </font>
+            </Button>
+         </children>
+      </HBox>
+      <Label fx:id="lblContent2" alignment="CENTER" layoutX="76.0" layoutY="267.0" prefHeight="17.0" prefWidth="315.0" text="&quot;be part of a change, start with your name now!&quot;&quot;">
+         <font>
+            <Font name="Arial" size="12.0" />
+         </font></Label>
    </children>
 </AnchorPane>
